--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <input id="title" class="border bg-gray-300 focus:outline-none pl-1" type="text">
             <h1>Description</h1>
             <textarea class="bg-gray-300 focus:outline-none pl-1" name="description" id="" cols="5" rows="4"></textarea>
+            <h1>Du</h1>
+            <!-- <input type="datepicker" class="datepicker bg-gray-300 focus:outline-none pl-1"> -->
             <div class="form__action my-2 w-full">
                 <button id="save" class="mr-1 bg-blue-500 p-1 w-20 text-gray-200 ">Save</button>
                 <a href="#" rel="modal:close"><button id="save" class="mr-1 bg-gray-500 p-1 w-20 text-gray-200 ">Close</button></a>
