--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
   </head>
   <body>
-    <div id='calendar' class="px-64 top-0">
+    <div id='calendar' class="px-56">
     </div>
     <div id="ex1" class="modal ">
         <div class="flex flex-col  ">
