--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <!-- <h1>Du</h1> -->
             <!-- <input type="datepicker" class="datepicker bg-gray-300 focus:outline-none pl-1"> -->
             <div class="form__action my-2 w-full">
-                <button id="save" class="mr-1 bg-blue-500 p-1 w-20 text-gray-200 ">Save</button>
+                <button id="save" class="mr-1 bg-blue-500 p-1 w-20 text-gray-200 focus:outline-none ">Save</button>
                 <a href="#" rel="modal:close"><button id="save" class="mr-1 bg-gray-500 p-1 w-20 text-gray-200 ">Close</button></a>
             </div>
         </div>
